--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "todd-kridel-portfolio-webpage-react",
   "version": "1.0.0",
@@ -12,7 +10,6 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
-    "gh-pages": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
@@ -43,6 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
-
