--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "gh-pages": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
@@ -40,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
   }
 }
